--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
-*.zip filter=lfs diff=lfs merge=lfs -text
 *.jpg filter=lfs diff=lfs merge=lfs -text
+*.zip filter=lfs diff=lfs merge=lfs -text
+provided_training_data/data/data/IMG/*.jpg filter=lfs diff=lfs merge=lfs -text
